TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-12-18 MickeM
 * Fixed path issues in the installer
 * Fixed shortcuts in the installer
 * Fixed so clients can understand no prefixed arguments ie.
     ... -c nrpe_query -a command=check_ok host=129.168.0.1

2012-12-02 MickeM
 * Added option to disable new alias check_cpu and only register old ones CheckCPU
   [/settings/default]
   modern commands=false

2012-11-29 MickeM
 * Improved exception handling in server threads

2012-11-28 MickeM
 * Fixed crash in NRPE server when payload was to large (#585 #582)
 * Fixed issue with lua unit test
 * Added payload length simulation in lua unit tests (so it returns various payload sizes)
 * Added nscp.sleep to Lua scripts (but dont use as I will implement coroutines in 0.4.2)
 * Fixed registry settings bug
 * Fixed issue with parsin performance data with leading spaces
 * Fixed issue with rendering filters

2012-11-18 MickeM
 * Created nscpnobp.exe which is a version without break pad for older machines (windows 2000 and nt4).
   This can only be foundin the zip file (not the msi)
 * Added some missing file to zip
 * Removed counters.defs since it is not used anymore

2012-11-17 MickeM
 * CheckEventLog: Added debug message lisgin all loaded filters to make it simpler to detect missing once
 * SimpleCache: Added keywords not-found-msg and not-found-code option to configure the outcome of "item not found".
    check_cache index=foobar "not-found-code=Doch! item was not found" not-found-code=critical
 * CheckProcess is no longer case sensetive
 * CheckServiceState: added support for pending states

2012-11-16 MickeM
  * CheckDriveSize now supports regular expressiion filtering:
    CheckDriveSize ShowAll MaxWarn=1M MaxCrit=2M CheckAll=volumes matching=.*[CD].*

2012-11-15 MickeM